--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 
             <div class="col-lg-5">
                 <img src="./assets/images/CONTACT DETAILS.png" alt="" class="img-fluid menu-logo">
-                <h6><li><a href="">Phone: +26371 222
-                    8511</a></li></h6>
+                <h6><li><a href="">Phone: +263777851147
+                    </a></li></h6>
                 <h6><li><a href="">Emall: rosewitermvundura@gmail.com</a></li></h6>
                 <div class="social-ico">
                     <img src="./assets/images/icons/Group 65.png" alt="" class="img-fluid">
