--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -38,20 +38,18 @@
 
             <div class="col-lg-6">
                 <h2>Cater Care full website</h2>
-                <h3>Design Solutions</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Reprehenderit, tempora nostrum. Hic corrupti adipisci est recusandae 
-                    alias sequi quidem dolorem dolorum provident quibusdam non perferendis, 
-                    iste blanditiis culpa, molestias illum.Amet mollitia nisi pariatur accusantium 
-                    officia modi repellat in facilis autem quidem atque esse inventore neque adipisci 
-                    molestias, laboriosam, tempora cupiditate quos facere delectus quo et? Nobis ad natus 
-                    fuga?
+                <h5 class="design-solutions">Design Solutions</h5>
+                <p>I created a visually stunning and user-friendly  full website  
+                    for Cater Care Restaurant which showcases  a sense of luxury, 
+                    sophistication, and exclusivity and the website also provides a seamless online reservation
+                     and ordering experience for customers.
+                    It  also conveys a refined and elegant ambiance that aligns with the restaurant's  dining experience.
+
                 </p>
 
                 <p>
-                    officia modi repellat in facilis autem quidem atque esse inventore neque adipisci 
-                    molestias, laboriosam, tempora cupiditate quos facere delectus quo et? Nobis ad natus 
-                    fuga?
+                    I chose a mute color palette  with an emphasis on black, white, and mastard to convey a premium feel.
+
                 </p>
 
                 <div class="color-schemes">
@@ -61,12 +59,12 @@
 
                 <div class="color-schemes">
                     <div class="rect2"></div>
-                    <p>FZA600</p>
+                    <p>FFFFFF</p>
                 </div>
 
                 <div class="color-schemes">
                     <div class="rect3"></div>
-                    <p>FZA600</p>
+                    <p>OA0909</p>
                 </div>
                
                 <h3>Figma Link <img src="./assets/images/icons/Arrow.png" alt=""></h3>
@@ -82,19 +80,17 @@
             <div class="col-lg-6">
                 <h2>Cater Care full website</h2>
                 <h3>Design Solutions</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Reprehenderit, tempora nostrum. Hic corrupti adipisci est recusandae 
-                    alias sequi quidem dolorem dolorum provident quibusdam non perferendis, 
-                    iste blanditiis culpa, molestias illum.Amet mollitia nisi pariatur accusantium 
-                    officia modi repellat in facilis autem quidem atque esse inventore neque adipisci 
-                    molestias, laboriosam, tempora cupiditate quos facere delectus quo et? Nobis ad natus 
-                    fuga?
+                <p>To  convey a sense of simplicity,efficiency and speed the app is designed in a way that it is 
+                     aesthetically pleasing, easy-to-use, and user-friendly to provide a seamless experience for customers.
+                     The app allows customers to place orders in advance for pick-up, 
+                     allowing them to save time and avoid waiting in line. 
+
                 </p>
 
                 <p>
-                    officia modi repellat in facilis autem quidem atque esse inventore neque adipisci 
-                    molestias, laboriosam, tempora cupiditate quos facere delectus quo et? Nobis ad natus 
-                    fuga?
+                    The color palette is consistent with the restaurant's branding and the colors 
+                    that evoke a sense of simplicity and efficiency.
+
                 </p>
 
                 <div class="color-schemes">
@@ -112,7 +108,7 @@
                     <p>435756</p>
                 </div>
 
-                <h3>Figma Link <img src="./assets/images/icons/Arrow.png" alt=""></h3>
+                <h2>Figma Link <img src="./assets/images/icons/Arrow.png" alt=""></h3>
             </div>
 
             <div class="col-lg-6">
