--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="bilboard-section">
     <div class="billboard">
             <h3 class="my-name">Hello, my name is <span>Rosewiter Mvundura</span></h3>
-                <img src="./assets/images/UI DESIGNER.png" alt="" class="img-fluid uiux-img">
+                <img src="./assets/images/UI DESIGNER.png" alt="" class=" uiux-img">
             <p>With a love for all things creative and colourful. I have a keen eve for detail
              and enjoy bringing my artistic acumen to life through digital design.</p>
              </div>
@@ -52,7 +52,7 @@
  <section class="aboutme-section" id="aboutme">
         <div class="row">
             <div class="col-lg-5">
-                <img src="./assets/images/about imagepng.png" alt="" class="img-fluid about-image">
+                <img src="./assets/images/about imagepng.png" alt="" class="about-image">
             </div>
             
             <div class="col-lg-7 about-txt-section">
