--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/back01.css">
     <link rel="stylesheet" href="./assets/css/mediaquerry.css">
-    <title>My Portfolio</title>
+    <title>myPortfolio</title>
 </head>
 <body>
    
